--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I  am</h3>
-                <h1 class="banner-title">Gaddafi Sarker</h1>
+                <h1 class="banner-title"><span class="text-primary">Gaddafi</span> Sarker</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button id="buttonbd" class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
