--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     </main>
     <footer>
         <div class="footer-column">
-            <h3 class="section-title">Lets Connect</h3>
-            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <h3 class="section-title-book">Lets Connect</h3>
+            <p class="section-description-book">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-links">
                 <a href=""><img src="images/icons/facebook.png" alt=""></a>
                 <a href=""><img src="images/icons/twitter.png" alt=""></a>
@@ -144,8 +144,18 @@
             </div>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">Let’s Message me</h3>
+            <h3 class="section-title-book">Let’s Message me</h3>
+            <form class="contact" caction="">
+                <input type="text" placeholder="Your Name">
+                <input type="text" name="Email" placeholder="Email">
+                <textarea name="Message" placeholder="Message" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
         </div>
     </footer>
+    <div class="gaddafi-bd">
+        <p class="my-text">© All Copyright gaddafi sarker. 2024</p>
+
+    </div>
 </body>
 </html>
