--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><button class="btn-primary">Hire Me</button></li>
+                <li><button class="btn-primary"><i class="fa-solid fa-envelope-open"></i> Hire Me</button></li>
             </ul>
         </nav>
         <div class="banner">
